# braincheck-c

./: .bazelrc  .gitattributes  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel
.clwb/: .bazelproject
.github/workflows/: build.yml  clang_format_check.yml
example/: BUILD.bazel  main.c
include/: braincheck.h
tests/: BUILD.bazel  braincheck_ansi_test.cpp  braincheck_assert_disabled_test.cpp  braincheck_assert_test.cpp  braincheck_backtrace_disabled_test.cpp  braincheck_backtrace_n_disabled_test.cpp  braincheck_backtrace_n_test.cpp  braincheck_backtrace_test.cpp  braincheck_debug_disabled_test.cpp  braincheck_debug_test.cpp  braincheck_disabled_test.cpp  braincheck_once_assert_test.cpp  braincheck_perror_disabled_test.cpp  braincheck_perror_test.cpp  c_compile_test.c  test_support.inc
