# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "test_support",
    testonly = True,
    hdrs = ["test_support.inc"],
    deps = [
        "//third_party/braincheck",
        "@catch2//:catch2_main",
    ],
)

cc_test(
    name = "c_compile_test",
    size = "small",
    srcs = ["c_compile_test.c"],
    deps = [
        "//third_party/braincheck",
        "@catch2//:catch2_main",
    ],
)

cc_test(
    name = "braincheck_backtrace_n_test",
    size = "small",
    srcs = ["braincheck_backtrace_n_test.cpp"],
    deps = [
        ":test_support",
        "//third_party/braincheck",
        "@catch2//:catch2_main",
    ],
)

cc_test(
    name = "braincheck_backtrace_test",
    size = "small",
    srcs = ["braincheck_backtrace_test.cpp"],
    deps = [
        ":test_support",
        "//third_party/braincheck",
        "@catch2//:catch2_main",
    ],
)

cc_test(
    name = "braincheck_debug_test",
    size = "small",
    srcs = ["braincheck_debug_test.cpp"],
    deps = [
        ":test_support",
        "//third_party/braincheck",
        "@catch2//:catch2_main",
    ],
)
