# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

WARNING_COPTS = [
    "-Wall",
    "-Wpedantic",
    "-Wextra",
]

C_COPTS = ["-std=c11"] + WARNING_COPTS

CPP_COPTS = ["-std=c++17"] + WARNING_COPTS

cc_library(
    name = "test_support",
    testonly = True,
    hdrs = ["test_support.inc"],
    copts = CPP_COPTS,
    deps = [
        "//:braincheck",
        "@catch2//:catch2_main",
    ],
)

cc_test(
    name = "c_compile_test",
    size = "small",
    srcs = ["c_compile_test.c"],
    copts = C_COPTS,
    deps = [
        "//:braincheck",
        "@catch2//:catch2_main",
    ],
)

[
    cc_test(
        name = t.replace(".cpp", ""),
        size = "small",
        srcs = [t],
        copts = CPP_COPTS,
        deps = [
            ":test_support",
            "//:braincheck",
            "@catch2//:catch2_main",
        ],
    )
    for t in [
        "braincheck_backtrace_disabled_test.cpp",
        "braincheck_backtrace_n_disabled_test.cpp",
        "braincheck_backtrace_n_test.cpp",
        "braincheck_backtrace_test.cpp",
        "braincheck_debug_disabled_test.cpp",
        "braincheck_debug_test.cpp",
        "braincheck_perror_disabled_test.cpp",
        "braincheck_perror_test.cpp",
    ]
]
